iptables/rules.v4
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
# Stateful firewall
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
# Local
-A INPUT -i lo -j ACCEPT
# Drop invalid
-A INPUT -m conntrack --ctstate INVALID -j DROP
# Allow new ICMP connections
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT


-A INPUT -p tcp --dport 22 -j ACCEPT
-A INPUT -p tcp --dport 25 -j ACCEPT
-A INPUT -p tcp --dport 80 -j ACCEPT
-A INPUT -p tcp --dport 64738 -j ACCEPT
-A INPUT -p udp --dport 64738 -j ACCEPT


# Reject
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
COMMIT
